css/style.css
/*
______________________________________________________________________________
|                  |`````| ||  || ||    ||     /```/ |````|  /\    // || //   |
|      //\\        |  |``` ||  || ||    ||     \ \`   `||`  //\\  //  ||//    |
|    ///  \\\      |  ```| ||  || ||__  ||__    _\ \   ||  //  \\ \\  ||\\    |
|  ///      \\\    |__|``` \\__// |___| |___|  \___/   || //    \\ \\ || \\   |
|  \\\  /\  ///                                                               |
|    \\//\\//       //\\   //  //\\  ||\\  ||^^   /\  /\  \\  //              |
|      \\//        ||__|| ||  ||__|| || || ||==  //\\//\\   ||                |
|                  ||``||  \\ ||``|| ||//  ||,, //  \/  \\  ||                |
`````````````````````````````````````````````````````````````````````````````
*/

/* FONTS AND COLORS */

@font-face { font-family: Orbitron; src: url('../fonts/orbitron-medium.otf'); }

html {
    box-sizing: border-box;
    background-color: black;
    color: red;
    border-color: red;
    font-family: Orbitron, sans-serif;
    text-align: center;
    height: 100%;
}

input {
    border-color: red;
    background-color: black;
    color: red;
}

button {
    border: solid 2px;
    background-color: black;
    color: red;
}

::-webkit-input-placeholder { color: red; }
::placeholder { color: red; }

/* LAYOUT AND ALIGNMENT */

body {
    height: 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
}

header {
    flex: 0 0 auto;
    border-bottom: solid 2px;
    width: 100%;
}

#title {
    font-size: 2.4em;
    margin: 0 0;
}

#subtitle {
    font-size: 1em;
    margin: 0 0;
}

main {
    flex: 1 1 auto;
    overflow-y: scroll;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    align-items: center;
}

#input-section {
    margin-top: 5px;
    position: relative;
    flex: 0 0 250px;
    width: 250px;
}

#players-input {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    border: solid 2px;
    border-radius: 50%;
    text-align: center;
    font-size: 8em;
}

#submit {
    position: absolute;
    top: 62%;
    left: 62%;
    height: 38%;
    width: 38%;
    border: solid 6px;
    border-radius: 50%;
    font-size: 2em;
}

#guess-section {
    flex: 0 0 auto;
}

#guess-list {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    list-style: none;
    padding: 0; /* needed to maintain alignment */
}

.guess {
    flex: 0 0 48px;
    height: 48px;
    border: solid 2px;
    border-radius: 10%;
    font-size: 16pt;
    padding: 0 2px;
    margin: 0 2px;
}

#menu-section {
    flex: 1 0 auto;
}

#reset, #hint {
    width: 70px;
    height: 40px;
    font-size: 16pt;
}

#reset {
    margin-right: 5px;
}

footer {
    flex: 0 0 auto;
    border-top: solid 2px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

#footer-logo {
    flex: 0 1 auto;
    width: 40vw;
    max-width: 280px;
}

#footer-name {
    flex: 0 0 auto;
    font-size: 12pt;
    margin: 0 0;
}

/* Breakpoints */

@media (min-width: 300px) {
    #footer-name { font-size: 16pt; }
}

@media (min-width: 360px) {
    #title { font-size: 2.4em; }
    #subtitle { font-size: 1em; }
    #footer-name { font-size: 20pt; }
}

@media (min-width: 433px) {
    #footer-name { font-size: 24pt; }
}

@media (min-width: 564px) {
    #footer-name { font-size: 30pt; }
}

/* Tablet */
@media (min-width: 768px) {

    #input-section {
        margin-top: 20px;
        flex-basis: 400px;
        width: 400px;
    }

    #players-input {
        font-size: 12em;
    }

    #submit {
        border: solid 9px;
        font-size: 4em;
    }

    .guess {
        flex: 0 0 100px;
        height: 100px;
        border: solid 2px;
        border-radius: 10%;
        font-size: 2.4em;
        padding: 0 2px;
        margin: 0 2px;
    }

    #footer-name { font-size: 36pt; }
    #title { font-size: 2.8em; }
    #subtitle { font-size: 1.2em; }

    #reset, #hint {
        font-size: 2.4em;
        width: 120px;
        height: 50px;
    }

}

/* Desktop */
@media (min-width: 1025px) {

    #input-section {
        margin-top: 20px;
        flex-basis: 500px;
        width: 500px;
    }

    #players-input {
        font-size: 14em;
    }

    #submit {
        border: solid 9px;
        font-size: 5em;
    }

    .guess {
        flex: 0 0 120px;
        height: 120px;
        border: solid 2px;
        border-radius: 10%;
        font-size: 2.8em;
        padding: 0 2px;
        margin: 0 2px;
    }

    #title { font-size: 3.2em; }
    #subtitle { font-size: 1.4em; }

    #reset, #hint {
        font-size: 2.8em;
        width: 140px;
        height: 60px;
    }

}

